#6 add versioning chapter in draft form still - and make new "part" in book structure for pkg maint.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,9 @@ book:
     - style.qmd
     - codereview.qmd
     - packagedocs.qmd
+    - part: Package Maintenance
+      chapters:
+        - versioning.qmd
     - references.qmd
 
 bibliography: references.bib
