remove versioning chapter - move it into maint chapter; fill out main chapter more

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,9 +19,7 @@ book:
     - style.qmd
     - codereview.qmd
     - packagedocs.qmd
-    - part: Package Maintenance
-      chapters:
-        - versioning.qmd
+    - maintenance.qmd
     - references.qmd
 
 bibliography: references.bib
