#6 started security chapter, remove intro ch not used, update welcome page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,7 @@ book:
     - codereview.qmd
     - packagedocs.qmd
     - maintenance.qmd
+    - security.qmd
     - references.qmd
 
 bibliography: references.bib
