add html option "link-external-newwindow: true" so that links are opened in a new tab

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -29,5 +29,6 @@ format:
       light: sandstone
       dark: darkly
     fontsize: 1.2em
+    link-external-newwindow: true
   pdf:
     documentclass: scrreprt
