--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,7 @@ book:
     - packagedocs.qmd
     - maintenance.qmd
     - security.qmd
+  site-url: https://getwilds.org/guide/
 
 bibliography: references.bib
 
