fix #18 fix truly awful color choices for inline code, add custom scss

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,8 +28,8 @@ bibliography: references.bib
 format:
   html:
     theme:
-      light: sandstone
-      dark: darkly
+      light: [sandstone, light.scss]
+      dark: [slate, dark.scss]
     fontsize: 1.2em
     link-external-newwindow: true
     code-overflow: wrap
