Adding initial version of the WILDS WDL Configuration Guide

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,7 @@ book:
     - codereview.qmd
     - packagedocs.qmd
     - maintenance.qmd
+    - wdlconfig.qmd
     - security.qmd
     - conventions.qmd
   site-url: https://getwilds.org/guide/
