Adding initial version of the WILDS Docker Configuration Guide

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,7 @@ book:
     - packagedocs.qmd
     - maintenance.qmd
     - wdlconfig.qmd
+    - docker.qmd
     - security.qmd
     - conventions.qmd
   site-url: https://getwilds.org/guide/
