#29 stared standards chapter, added links in other chapters to allow for linking to anchors

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,7 @@ book:
     - wdlconfig.qmd
     - docker.qmd
     - conventions.qmd
+    - standards.qmd
   site-url: https://getwilds.org/guide/
 
 bibliography: references.bib
