change setup for rules:
- instead of callouts use _variables.yml file to define rules
- and combination of bootstrap badge + text of rule
- provides more flexiblity in where rules can be placed (e..g, in lists)
- most rules were in lists so it would have been awkward to have callouts combined with lists

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Authors@R: c(
   person("Scott", "Chamberlain", , "sachamber@fredhutch.org", c("aut", "cre"))
   )
 Imports:
-    rmarkdown
+    rmarkdown,
+    htmltools
 Remotes: r-lib/testthat
 URL: https://github.com/getwilds/guide
 BugReports: https://github.com/getwilds/guide/issues
